k8s/base/frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hhb-frontend
  labels:
    name: hhb-frontend
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
      protocol: TCP
  selector:
    name: hhb-frontend
